--- a/DevHabit.APi/DevHabit.APi.csproj
+++ b/DevHabit.APi/DevHabit.APi.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0-preview.5.25277.114"/>
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1"/>
   </ItemGroup>
 </Project>
