--- a/DevHabit.APi/DevHabit.APi.csproj
+++ b/DevHabit.APi/DevHabit.APi.csproj
@@ -12,5 +12,7 @@
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1"/>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0"/>
+    <PackageReference Include="FluentValidation" Version="12.0.0"/>
   </ItemGroup>
 </Project>
