--- a/DevHabit.APi/DevHabit.APi.csproj
+++ b/DevHabit.APi/DevHabit.APi.csproj
@@ -16,5 +16,6 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0"/>
     <PackageReference Include="FluentValidation" Version="12.0.0"/>
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.6"/>
+    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0"/>
   </ItemGroup>
 </Project>
